[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nasa-neows-assignment"
authors = [
    {name = "MENGYI MERYL FANG", email = "mfang@wellesley.edu"},
]
description = ""
version = "0.1.0"
dependencies = ["matplotlib", "numpy","pandas"]
requires-python = ">=3.11.0"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
]

